fix: spacing

--- a/nitro-ui/src/components/left-side/game-tools/GameTools.scss
+++ b/nitro-ui/src/components/left-side/game-tools/GameTools.scss
@@ -1,7 +1,7 @@
  .quick-menu {
             position: absolute;
             left: 20px;
-            top: 400px;
+            top: 250px;
             display: flex;
             flex-direction: column;
             gap: 15px;
